--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "capstone",
   "version": "0.1.0",
-  "homepage": "https://raeelwell.github.io/Rae-Ada-Capstone/",
+  "homepage": "https://raeelwell.github.io/Rae-Ada-Capstone",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
